# icp-cli

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  dist-workspace.toml  feed.xml  icp.yaml  index.html  llms-full.txt  llms.txt  network-launcher-version  robots.txt  rust-toolchain.toml  sitemap.xml  taplo.toml
.cargo/: audit.toml
crates/icp/: Cargo.toml
crates/icp-adapter/: Cargo.toml
crates/icp-adapter/src/: assets.rs  build.rs  pre_built.rs  script.rs  sync.rs
crates/icp-canister-interfaces/: Cargo.toml
crates/icp-canister-interfaces/src/: candid_ui.rs  cycles_ledger.rs  cycles_minting_canister.rs  governance.rs  icp_ledger.rs  internet_identity.rs  lib.rs  management_canister.rs  nns_migration.rs  nns_root.rs  proxy.rs  registry.rs
crates/icp-cli/: Cargo.toml  build.rs
crates/icp-cli/artifacts/: mod.rs  source.json
crates/icp-cli/recover-cycles-canister/: Cargo.toml
crates/icp-cli/recover-cycles-canister/src/: lib.rs
crates/icp-cli/src/: artifacts.rs  context.rs  dist.rs  logging.rs  main.rs  options.rs  output.rs  progress.rs  store_artifact.rs  store_id.rs  telemetry.rs  version.rs
crates/icp-cli/src/commands/: args.rs  build.rs  deploy.rs  helpers.rs  mod.rs  new.rs  parsers.rs  serve_bundle.rs  settings.rs  sync.rs  validation.rs
crates/icp-cli/src/commands/candid/: build.rs  mod.rs
crates/icp-cli/src/commands/canister/: binding_env_vars.rs  build.rs  call.rs  create.rs  delete.rs  info.rs  install.rs  link.rs  list.rs  logs.rs  metadata.rs  migrate_id.rs  mod.rs  show.rs  start.rs  status.rs  stop.rs  sync.rs  top_up.rs
crates/icp-cli/src/commands/cycles/: balance.rs  mint.rs  mod.rs  transfer.rs
crates/icp-cli/src/operations/: access.rs  binding_env_vars.rs  build.rs  bundle.rs  call.rs  candid_compat.rs  canister_migration.rs  create.rs  customize.rs  ii_poll.rs  init_args.rs  install.rs  misc.rs  mod.rs  preinstall.rs  proxy.rs  proxy_management.rs  recover_cycles.rs  settings.rs  snapshot_transfer.rs  sync.rs  update_check.rs  wasm.rs
crates/icp-cli/tests/: build_adapter_tests.rs  build_tests.rs  bundle_tests.rs  canister_call_root_key_tests.rs  canister_call_tests.rs  canister_create_tests.rs  canister_delete_tests.rs  canister_id_tests.rs  canister_info_tests.rs  canister_install_tests.rs  canister_link_tests.rs  canister_logs_tests.rs  canister_metadata_tests.rs  canister_settings_tests.rs  canister_snapshot_tests.rs  canister_start_tests.rs  canister_status_tests.rs  canister_stop_tests.rs  canister_top_up_tests.rs  cycles_tests.rs  dependency_tests.rs  deploy_tests.rs  identity_tests.rs  main_tests.rs  network_info_tests.rs  network_ping_tests.rs  network_status_tests.rs  network_tests.rs  new_tests.rs  project_tests.rs  recipe_tests.rs  settings_tests.rs  sync_tests.rs  telemetry_tests.rs  token_tests.rs
crates/icp-cli/tests/assets/: .gitignore  3mb_hello_world.wasm  bob_sec1_k256.pem  broken_dfx_pkcs8_ed25519.pem  decrypted_pkcs8_ed25519.pem  decrypted_sec1_p256.pem  encrypted_pkcs8_k256.pem  generate_large_wasm.sh  limit_transfer.py  pkcs8_p256.pem  proxy.wasm  separate_params_sec1_p256.pem  session_p256.pub.pem  unsupported_curve_sec1.pem
crates/icp-cli/tests/common/: clients.rs  context.rs  mod.rs  softhsm.rs
crates/icp-deploy-canister/: Cargo.toml
crates/icp-deploy-canister/src/: deploy.rs  files.rs  http.rs  icp_access.rs  ids.rs  lib.rs  project.rs  sync_exec.rs  testutil.rs
crates/icp-deploy-canister/src/canister/: mod.rs
crates/icp-deploy-canister/src/fs/: mod.rs
crates/icp-deploy-canister/src/manifest/: mod.rs
crates/icp-deploy-canister/src/network/: mod.rs
crates/icp-identity/: Cargo.toml
crates/icp-identity/src/: key.rs  manifest.rs  paths.rs
crates/icp-network/: Cargo.toml
crates/icp-network/src/: access.rs  config.rs  directory.rs  lib.rs  lock.rs  managed.rs  structure.rs
crates/icp-network/src/managed/: descriptor.rs  pocketic.rs  run.rs
crates/icp-project/: Cargo.toml
crates/icp-project/src/: directory.rs  lib.rs  manifest.rs  structure.rs
crates/icp-sync-plugin/: Cargo.toml  DESIGN.md  SANDBOX.md  TODO.md  build.rs  sync-plugin.wit
crates/icp-sync-plugin/src/: lib.rs  path.rs  runtime.rs  sandbox.rs
crates/icp/examples/: deploy_bundle.rs
crates/icp/src/: agent.rs  context.rs  deploy.rs  directories.rs  environment.rs  host_files.rs  lib.rs  network.rs  package.rs  parsers.rs  prelude.rs  project.rs  settings.rs  signal.rs  store_artifact.rs  store_id.rs  system_canisters.rs  telemetry_data.rs
crates/icp/src/canister/: assets.rs  build.rs  mod.rs  prebuilt.rs  script.rs  sync.rs  wasm.rs
crates/icp/src/context/: init.rs  mod.rs  tests.rs
crates/icp/src/fs/: json.rs  lock.rs  mod.rs  yaml.rs
crates/icp/src/identity/: delegation.rs  key.rs  keyring_mock.rs  manifest.rs  mod.rs  seed.rs
crates/icp/src/manifest/: canister.rs  dependency.rs  environment.rs  mod.rs  network.rs  project.rs  recipe.rs  serde_helpers.rs
crates/icp/src/network/: access.rs  config.rs  custom_domains.rs  directory.rs  lock.rs  mod.rs  structure.rs
crates/icp/src/operations/: create.rs
crates/icp/src/settings/: mod.rs
crates/schema-gen/: Cargo.toml  README.md
crates/schema-gen/src/: main.rs
lib/icp-adapter/: Cargo.toml
lib/icp-adapter/src/: assets.rs  build.rs  lib.rs  motoko.rs  pre_built.rs  rust.rs  script.rs  shell.rs  sync.rs
lib/icp-canister/: Cargo.toml
lib/icp-canister/src/: handlebars.rs  lib.rs  manifest.rs  model.rs  recipe.rs
lib/icp-identity/: Cargo.toml
lib/icp-identity/src/: key.rs  lib.rs  manifest.rs
lib/icp-network/: Cargo.toml
lib/icp-network/src/: access.rs  config.rs  directory.rs  lib.rs  managed.rs  run.rs  start.rs  status.rs  structure.rs
lib/icp-network/src/config/: model.rs
lib/icp-network/src/managed/: descriptor.rs  pocketic.rs  run.rs
lib/icp-network/src/pocketic/: admin.rs  instance.rs  native.rs
lib/icp-project/: Cargo.toml
lib/icp-project/src/: directory.rs  glob.rs  lib.rs  manifest.rs  model.rs  project.rs  structure.rs
sync-plugin/poc/: Cargo.toml  build.rs
sync-plugin/poc/src/: lib.rs
(+2247 files in other folders)
