[workspace]
members = [
    "bin/icp-cli",
    "lib/icp-adapter",
    "lib/icp-canister",
    "lib/icp-dirs",
    "lib/icp-fs",
    "lib/icp-identity",
    "lib/icp-network",
    "lib/icp-project",
]

exclude = ["examples/icp-rust"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.88"
bip32 = "0.5.0"
camino = { version = "1.1.9", features = ["serde1"] }
camino-tempfile = "1"
candid = "0.10.14"
clap = { version = "4.5.3", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
dunce = "1.0.5"
ed25519-consensus = "2.1.0"
elliptic-curve = { version = "0.13.8", features = ["sec1", "std", "pkcs8"] }
fd-lock = "4.0.4"
glob = "0.3.2"
hex = "0.4.3"
ic-agent = { version = "0.40.1" }
icp-adapter = { path = "lib/icp-adapter" }
icp-canister = { path = "lib/icp-canister" }
icp-dirs = { path = "lib/icp-dirs" }
icp-fs = { path = "lib/icp-fs" }
icp-identity = { path = "lib/icp-identity", features = ["clap"] }
icp-network = { path = "lib/icp-network" }
icp-project = { path = "lib/icp-project" }
itertools = "0.14.0"
k256 = { version = "0.13.4", features = ["pem", "pkcs8", "std"] }
p256 = { version = "0.13.2", features = ["pem", "pkcs8", "std"] }
pem = "3.0.5"
pkcs8 = { version = "0.10.2", features = ["encryption", "std"] }
pocket-ic = "9.0.0"
rand = "0.9.1"
sec1 = { version = "0.7.3", features = ["pkcs8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
shellwords = "1.1.0"
snafu = "0.8.5"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
time = "0.3.9"
tiny-bip39 = "2.0.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zeroize = "1.8.1"

[workspace.dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["rustls-tls"]

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
enum_variant_names = "allow"

[profile.dev.package.scrypt]
opt-level = 3
