[workspace]
members = [
    "bin/icp-cli",
    "lib/icp-adapter",
    "lib/icp-canister",
    "lib/icp-dirs",
    "lib/icp-fs",
    "lib/icp-identity",
    "lib/icp-network",
    "lib/icp-project",
]

exclude = ["examples/icp-rust", "examples/icp-rust-recipe"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.88"
bip32 = "0.5.0"
camino = { version = "1.1.9", features = ["serde1"] }
camino-tempfile = "1"
candid = "0.10.14"
candid_parser = "0.1"
clap = { version = "4.5.3", features = ["derive", "env"] }
clap-markdown = "0.1.5"
console = "0.16.0"
dialoguer = "0.11.0"
directories = "6.0.0"
dunce = "1.0.5"
ed25519-consensus = "2.1.0"
elliptic-curve = { version = "0.13.8", features = ["sec1", "std", "pkcs8"] }
fd-lock = "4.0.4"
futures = "0.3.31"
glob = "0.3.2"
handlebars = "6.3.2"
hex = "0.4.3"
httptest = "0.16.3"
ic-agent = { version = "0.44.0" }
ic-asset = { version = "0.25.0" }
ic-utils = { version = "0.44.0" }
icp-adapter = { path = "lib/icp-adapter" }
icp-canister = { path = "lib/icp-canister" }
icp-dirs = { path = "lib/icp-dirs" }
icp-fs = { path = "lib/icp-fs" }
icp-identity = { path = "lib/icp-identity", features = ["clap"] }
icp-network = { path = "lib/icp-network" }
icp-project = { path = "lib/icp-project" }
indicatif = "0.18.0"
itertools = "0.14.0"
k256 = { version = "0.13.4", features = ["pem", "pkcs8", "std"] }
mockall = "0.13.1"
p256 = { version = "0.13.2", features = ["pem", "pkcs8", "std"] }
pathdiff = { version = "0.2.3", features = ["camino"] }
pem = "3.0.5"
pkcs8 = { version = "0.10.2", features = ["encryption", "std"] }
pocket-ic = "9.0.0"
rand = "0.9.1"
sec1 = { version = "0.7.3", features = ["pkcs8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shellwords = "1.1.0"
slog = "2.7.0"
snafu = "0.8.5"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
time = "0.3.9"
tiny-bip39 = "2.0.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zeroize = "1.8.1"

[workspace.dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["rustls-tls"]

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
enum_variant_names = "allow"

[profile.dev.package.scrypt]
opt-level = 3
