[package]
name = "icp-canister-interfaces"
version.workspace = true
edition = { workspace = true }
license = { workspace = true }
publish.workspace = true

[dependencies]
bigdecimal = { workspace = true }
candid = { workspace = true }
ic-management-canister-types = { workspace = true }
serde = { workspace = true }
