[package]
name = "icp-cli"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[[bin]]
name = "icp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bigdecimal.workspace = true
bip32.workspace = true
byte-unit.workspace = true
camino-tempfile.workspace = true
candid_parser.workspace = true
candid.workspace = true
clap-markdown.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
elliptic-curve.workspace = true
futures.workspace = true
hex.workspace = true
httptest.workspace = true
ic-agent.workspace = true
ic-ledger-types.workspace = true
ic-management-canister-types.workspace = true
ic-utils.workspace = true
icp-canister-interfaces.workspace = true
icp.workspace = true
icrc-ledger-types.workspace = true
indicatif.workspace = true
itertools.workspace = true
k256.workspace = true
lazy_static.workspace = true
pem.workspace = true
phf.workspace = true
pkcs8.workspace = true
rand.workspace = true
reqwest.workspace = true
sec1.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
sysinfo.workspace = true
tiny-bip39.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
cargo-generate = "0.23.7"
anstyle = "1.0.13"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2"
camino-tempfile = "1"
indoc.workspace = true
icp = { workspace = true }
nix = { version = "0.30.1", features = ["process", "signal"] }
predicates = "3"
rand.workspace = true
serde_yaml.workspace = true
serial_test = { version = "3.2.0", features = ["file_locks"] }
uuid.workspace = true

[lints]
workspace = true

[build-dependencies]
hex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
