[package]
name = "icp-cli"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "icp"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.13"
anyhow.workspace = true
async-trait.workspace = true
bigdecimal.workspace = true
bip32.workspace = true
byte-unit.workspace = true
camino-tempfile.workspace = true
candid_parser = { workspace = true, features = ["assist"] }
candid.workspace = true
cargo-generate = { version = "0.23.7", features = ["vendored-openssl"] }
clap-markdown.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
dunce.workspace = true
elliptic-curve.workspace = true
futures.workspace = true
hex.workspace = true
httptest.workspace = true
ic-agent.workspace = true
ic-ed25519.workspace = true
ic-ledger-types.workspace = true
ic-management-canister-types.workspace = true
ic-utils.workspace = true
icp-canister-interfaces.workspace = true
icp.workspace = true
icrc-ledger-types.workspace = true
indicatif.workspace = true
itertools.workspace = true
k256.workspace = true
lazy_static.workspace = true
p256.workspace = true
pem.workspace = true
phf.workspace = true
pkcs8.workspace = true
rand.workspace = true
regex = "1.12.2"
reqwest.workspace = true
sec1.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
shellwords.workspace = true
snafu.workspace = true
sysinfo.workspace = true
tiny-bip39.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
wslpath2.workspace = true

[dev-dependencies]
assert_cmd = "2"
camino-tempfile = "1"
indoc.workspace = true
icp = { workspace = true }
predicates = "3"
rand.workspace = true
send_ctrlc = "0.6"
serde_yaml.workspace = true
serial_test = { version = "3.2.0", features = ["file_locks"] }
test-tag = "0.1"
uuid.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["process", "signal"] }

[lints]
workspace = true

[build-dependencies]
hex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

# explicitly opt-in to distribution via `dist`
[package.metadata.dist]
dist = true
