[package]
name = "icp-cli"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "icp"
path = "src/main.rs"

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bigdecimal.workspace = true
bip32.workspace = true
byte-unit.workspace = true
camino-tempfile.workspace = true
candid_parser = { workspace = true, features = ["assist"] }
candid.workspace = true
cargo-generate.workspace = true
clap-markdown.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
dunce.workspace = true
elliptic-curve.workspace = true
flate2.workspace = true
futures.workspace = true
hex.workspace = true
httptest.workspace = true
ic-agent.workspace = true
ic-ed25519.workspace = true
ic-ledger-types.workspace = true
ic-management-canister-types.workspace = true
ic-utils.workspace = true
icp-canister-interfaces.workspace = true
icp = { workspace = true, features = ["clap"] }
icrc-ledger-types.workspace = true
indicatif.workspace = true
itertools.workspace = true
k256.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
p256.workspace = true
pem.workspace = true
phf.workspace = true
pkcs8.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
sec1.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
sha2.workspace = true
shellwords.workspace = true
snafu.workspace = true
sysinfo.workspace = true
tiny-bip39.workspace = true
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
wasmparser.workspace = true
wslpath2.workspace = true

[target.'cfg(unix)'.dependencies]
cargo-generate = { workspace = true, features = ["vendored-openssl"] }

[dev-dependencies]
assert_cmd.workspace = true
camino-tempfile.workspace = true
cryptoki.workspace = true
indoc.workspace = true
predicates.workspace = true
rand.workspace = true
send_ctrlc.workspace = true
serde_yaml.workspace = true
serial_test.workspace = true
test-tag.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true }

[lints]
workspace = true

[build-dependencies]
hex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

# explicitly opt-in to distribution via `dist`
[package.metadata.dist]
dist = true
