[package]
name = "icp-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
bip32.workspace = true
clap = { workspace = true, optional = true }
directories.workspace = true
ed25519-consensus.workspace = true
elliptic-curve.workspace = true
ic-agent.workspace = true
icp.workspace = true
icp-dirs.workspace = true
icp-fs.workspace = true
itertools.workspace = true
k256.workspace = true
p256.workspace = true
pem.workspace = true
pkcs8.workspace = true
rand.workspace = true
scrypt = "0.11.0"
sec1.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
tiny-bip39.workspace = true
zeroize.workspace = true

[features]
clap = ["dep:clap"]

[lints]
workspace = true
