[package]
name = "icp-network"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = { workspace = true }
fd-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
icp = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
