[package]
name = "icp-project"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = { workspace = true }
futures = { workspace = true }
icp = { workspace = true }
icp-network = { workspace = true }
pathdiff.workspace = true
serde = { workspace = true }
schemars = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
icp-adapter = { workspace = true }
camino-tempfile = { workspace = true }
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
