[package]
name = "icp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bip32 = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
candid = { workspace = true }
clap = { workspace = true, optional = true }
directories = { workspace = true }
dunce = { workspace = true }
ed25519-consensus = { workspace = true }
elliptic-curve = { workspace = true }
fd-lock = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
handlebars = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-asset = { workspace = true }
ic-ledger-types = { workspace = true }
ic-utils = { workspace = true }
icp-canister-interfaces = { workspace = true }
icrc-ledger-types = { workspace = true }
itertools = { workspace = true }
k256 = { workspace = true }
p256 = { workspace = true }
pem = { workspace = true }
pkcs8 = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
scrypt = { workspace = true }
sec1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shellwords = { workspace = true }
slog = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
