[package]
name = "icp"
version.workspace = true
edition = { workspace = true }
license = { workspace = true }
publish.workspace = true

[dependencies]
async-dropper = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { workspace = true }
bip32 = { workspace = true }
bollard = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
candid = { workspace = true }
clap = { workspace = true, optional = true }
console = { workspace = true }
directories = { workspace = true }
dunce = { workspace = true }
ed25519-consensus = { workspace = true }
elliptic-curve = { workspace = true }
fd-lock = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
handlebars = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-asset = { workspace = true }
ic-ed25519 = { workspace = true }
ic-ledger-types = { workspace = true }
ic-utils = { workspace = true }
icp-canister-interfaces = { workspace = true }
icrc-ledger-types = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
k256 = { workspace = true }
keyring = { workspace = true }
notify = { workspace = true }
p256 = { workspace = true }
pem = { workspace = true }
pkcs8 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
scrypt = { workspace = true }
sec1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shellwords = { workspace = true }
slog = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wslpath2 = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
