[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema-gen"
path = "src/main.rs"

[dependencies]
icp-project = { workspace = true }
icp-canister = { workspace = true }
icp-network = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
