[package]
name = "schema-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "schema-gen"
path = "src/main.rs"

[dependencies]
icp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
