[package]
name = "icp-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
camino = { workspace = true }
dunce = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-asset = { workspace = true }
ic-utils = { workspace = true }
icp-fs = { "path" = "../icp-fs" }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
shellwords = { workspace = true }
slog = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
camino-tempfile = { workspace = true }
