[package]
name = "icp-canister"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { workspace = true }
icp-adapter = { "path" = "../icp-adapter" }
icp-fs = { "path" = "../icp-fs" }
serde = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
mockall = { workspace = true }
