[package]
name = "icp-network"
version = "0.1.0"
edition = "2024"

[dependencies]
fd-lock = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
icp-support = { "path" = "../icp-support" }
snafu = { workspace = true }
tokio = { workspace = true }
