[package]
name = "icp-network"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = { workspace = true }
fd-lock = { workspace = true }
ic-agent = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
icp-support = { "path" = "../icp-support" }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
