[package]
name = "icp-network"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { workspace = true }
candid = { workspace = true }
fd-lock = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
icp-fs = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
